--- a/web/assets/css/global.css
+++ b/web/assets/css/global.css
@@ -809,7 +809,7 @@ h6 { font-size: var(--text-base); }
   cursor: pointer;
   padding: 0 15px; /* Horizontal padding only */
   height: 100%; /* Full height of nav bar */
-  transition: color 0.4s cubic-bezier(0.4, 0, 1, 1);
+  transition: color 0.4s cubic-bezier(1, 0.02, 1, 1);
 }
 
 .menu-item:hover {
